WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219529
[LFC][Floats] FloatAvoider does not need to keep a pointer to Layout::Box around.
https://bugs.webkit.org/show_bug.cgi?id=219529
Summary
[LFC][Floats] FloatAvoider does not need to keep a pointer to Layout::Box aro...
alan
Reported
2020-12-03 20:14:49 PST
ssia
Attachments
Patch
(7.15 KB, patch)
2020-12-03 20:16 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-12-03 20:16:23 PST
Created
attachment 415382
[details]
Patch
EWS
Comment 2
2020-12-04 12:54:25 PST
Committed
r270452
: <
https://trac.webkit.org/changeset/270452
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 415382
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-12-04 12:55:19 PST
<
rdar://problem/71990069
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug