[LFC][Floats] FloatAvoider does not need to keep a pointer to Layout::Box around. https://bugs.webkit.org/show_bug.cgi?id=219529

Reviewed by Antti Koivisto.

* layout/floats/FloatAvoider.cpp:
(WebCore::Layout::FloatAvoider::FloatAvoider):
* layout/floats/FloatAvoider.h:
(WebCore::Layout::FloatAvoider::isLeftAligned const):
(WebCore::Layout::FloatAvoider::isFloatingBox const):
(WebCore::Layout::FloatAvoider::layoutBox const): Deleted.
* layout/floats/FloatingContext.cpp:
(WebCore::Layout::FloatingContext::positionForFloat const):
(WebCore::Layout::FloatingContext::positionForNonFloatingFloatAvoider const):


Canonical link: https://commits.webkit.org/232130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270452 268f45cc-cd09-0410-ab3c-d52691b4dbfc